# zurich-pool-exporter

./: .gitignore  .mdformat.toml  CONTEXT.md  CONTEXT2.md  Dockerfile  LICENSE  README.md  config.yml  devbox.json  docker-bake.hcl  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  dprint.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-build.yml  lint-and-format.yml  test-lint-format.yml
deploy/grafana/provisioning/dashboards/: dashboard.yml  pool_overview.json
deploy/prometheus/: prometheus.yml
grafana/provisioning/dashboards/: pool_overview.json
pool_exporter/: api_types.py  config.py  main.py  metrics.py  occupancy_collector.py  temperature_collector.py
prometheus/: prometheus.yml
src/pool_exporter/: __init__.py  __main__.py  api_types.py  config.py  data_collector.py  exporter.py  main.py  metrics.py  occupancy_collector.py  temperature_collector.py
tests/: test_api_types.py  test_config.py  test_e2e.py  test_metrics.py  test_occupancy_collector.py  test_temperature_collector.py
zurich-pool-collector/: Caddyfile  Dockerfile  config.yml  devbox.json  pyproject.toml
zurich-pool-collector/pool_collector/: collector.py  config.py  main.py  metrics.py  occupancy_collector.py  temperature_collector.py
