[project]
name = "pool-exporter"
version = "0.0.1"
description = "Data exporter for Zürich swimming pool occupancy"
authors = [
  { name = "Your Name", email = "you@example.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "websockets (>=15.0.1,<16.0.0)",
  "prometheus-client (>=0.21.1,<0.22.0)",
  "pyyaml (>=6.0.2,<7.0.0)",
  "aiohttp (>=3.11.18,<4.0.0)",
]

[project.scripts]
pool-exporter = "pool_exporter.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.0"
pytest = "^8.4.1"
types-pyyaml = "^6.0.12.20250402"

[tool.mypy]
strict = true

[tool.ruff]
lint.select = [
  "E", # pycodestyle
  "F", # Pyflakes
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "SIM", # flake8-simplify
  "I", # isort
  "C90", # mccabe complexity
]
